<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/work_entries"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/work_entries" />

        <item
            android:id="@+id/clients"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/clients" />

        <item
            android:id="@+id/projects"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/projects" />

        <item
            android:id="@+id/projects_status"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/projects_status" />

        <item
            android:id="@+id/logout"
            android:checked="false"
            android:icon="@drawable/ic_add"
            android:title="@string/logout" />
    </group>
</menu>