<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/animated_fab_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:transitionName="reveal"
            app:backgroundTint="@color/colorAccent"
            app:elevation="0dp"
            app:fabSize="normal"
            app:pressedTranslationZ="8dp" />

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="invisible">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_calendar"
                    android:focusable="false"
                    android:hint="@string/select_date"
                    android:imeOptions="actionNext"
                    android:inputType="date" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_clock"
                    android:hint="@string/how_much_time"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/what_project"
                    android:imeOptions="actionNext"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:hint="@string/what_did_you_do"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:scrollbars="vertical" />

            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>